LPT-2371 - Log SJP payload to azure blob Async